CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
project(splitter)
SET(CMAKE_CXX_FLAGS "-std=c++17 -Wall -pedantic -Wextra -g")
find_package(Boost 1.53 COMPONENTS program_options)
if(Boost_FOUND)
    include_directories($Boost_INCLUDE_DIRS})
    ADD_EXECUTABLE(wrapper wrapper.cpp split.cpp)
    target_link_libraries(wrapper ${Boost_LIBRARIES})
endif()
